2001-10-23  shawn  <sabetts@vcn.bc.ca>

	* nethack.el (nethack-parse-status-lines): the highlight delay is
	negative if the change in status is bad and positive when good.
	(nethack-parse-status-lines, nethack-format-status): if the status
	change is negative change the value to a red face, green if
	positive.

2001-10-22  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack.el (nethack-process-filter): Do not send the return
	value to the running process.

	* nethack-keys.el (nethack-map-mode-map): C-c C-c is bound to
	nethack-command-quit.

	* nethack-api.el (nethack-return): Send the return value directly
	from here.
	(nethack-retval): Remove function.
	(nethack-api-ask-direction): Add prompt argument.  Add down, up,
	and self directions.
	(nethack-api-display-nhwindow): Do not protect windows.  Clear the
	value of nethack-menu when displaying a menu window.
	(nethack-menu-goto-next): Make sure nethack-menu is non-nil.
	(nethack-menu-goto-prev): Likewise.
	(nethack-protect-windows): Remove macro.
	(nethack-api-select-menu): Do not protect windows.

	* nethack-apix.el: Removed from repository.

	* nethack.el (nethack-colors): New vector.
	(nethack-colors-alist): Remove.

	* nethack-api.el (nethack-api-print-glyph): Use nethack-colors
	vector.

	* nethack.el (nethack-format-status): Use nethack-red-face for
	changed attributes.

	* nethack-api.el (nethack-return): New function.
	(nethack-retval): New function.
	(nethack-api-raw-print, nethack-api-raw-print, nethack-api-curs)
	(nethack-api-putstr, nethack-api-get-command)
	(nethack-api-print-glyph, nethack-api-player-selection)
	(nethack-api-display-file, nethack-api-doprev-message)
	(nethack-api-init-nhwindows, nethack-api-exit-nhwindows)
	(nethack-api-clear-nhwindow, nethack-api-display-nhwindow)
	(nethack-api-destroy-nhwindow, nethack-api-start-menu)
	(nethack-api-add-menu, nethack-api-end-menu)
	(nethack-api-select-menu, nethack-api-outrip): Remove 'void.
	(nethack-api-yn-function, nethack-api-ask-direction)